tests/NormalTests/paczka1/small_fuzzy/74537809.err
Error in line 1: A212 S446 92,9
Error in line 8: A212 A759 11,2
Error in line 9: 2IL2KgrbJB A759 82,0
